fix: z-index of the badge in the Grid

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -221,6 +221,10 @@ a {
     .k-grid-toolbar .k-textbox {
         margin-bottom: 10px;
     }
+    
+    .k-badge {
+        z-index: 1
+    }
 }
 
 @media (min-width: 480px) {
